fix: handle NoResourceFoundException in global exception handler