@@ -2,12 +2,12 @@ package com.jinh.boilerplate.global.error;
 
 import com.jinh.boilerplate.global.common.ApiResponse;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.HttpRequestMethodNotSupportedException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
+import org.springframework.web.servlet.resource.NoResourceFoundException;
 
 /**
  * 전역 예외 처리(Global Exception Handling) 설정
@@ -23,7 +23,7 @@ public class GlobalExceptionHandler {
      */
     @ExceptionHandler(MethodArgumentNotValidException.class)
     protected ResponseEntity<ApiResponse<Void>> handleMethodArgumentNotValidException(MethodArgumentNotValidException e) {
-        log.warn("유효성 검사 실패: {}", e.getBindingResult().getAllErrors().get(0).getDefaultMessage());
+        log.warn("유효성 검사 실패: {}", e.getBindingResult().getAllErrors().getFirst().getDefaultMessage());
         return ResponseEntity.status(ErrorCode.INVALID_INPUT_VALUE.getStatus())
                 .body(ApiResponse.fail(ErrorCode.INVALID_INPUT_VALUE.getMessage()));
     }
@@ -39,7 +39,20 @@ public class GlobalExceptionHandler {
     }
 
     /**
-     * 3. 비즈니스 로직 예외 처리 (Custom Exceptions 포함)
+     * 3. 존재하지 않는 정적 리소스 요청 시 발생 (favicon.ico, .well-known 등)
+     */
+    @ExceptionHandler(NoResourceFoundException.class)
+    protected ResponseEntity<ApiResponse<Void>> handleNoResourceFoundException(NoResourceFoundException e) {
+        // 브라우저의 자동 요청이 많으므로 ERROR가 아닌 WARN으로 로그 레벨을 낮추어 관리합니다.
+        log.warn("No static resource found for path: {}", e.getResourcePath());
+
+        return ResponseEntity
+                .status(ErrorCode.RESOURCE_NOT_FOUND.getStatus())
+                .body(ApiResponse.fail(ErrorCode.RESOURCE_NOT_FOUND.getMessage()));
+    }
+
+    /**
+     * 4. 비즈니스 로직 예외 처리 (Custom Exceptions 포함)
      * EntityNotFoundException, InvalidValueException 등이 모두 이 핸들러를 탑니다.
      */
     @ExceptionHandler(BusinessException.class)
@@ -52,7 +65,7 @@ public class GlobalExceptionHandler {
     }
 
     /**
-     * 4. 그 외 모든 최상위 예외 처리
+     * 5. 그 외 모든 최상위 예외 처리
      * 시스템 런타임 오류로 간주하고 500 에러를 반환합니다.
      */
     @ExceptionHandler(Exception.class)
